Feat: Base element layout

--- a/css/main.css
+++ b/css/main.css
@@ -180,9 +180,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
@@ -261,3 +261,22 @@ textarea {
   }
 }
 
+.form-group {
+  width: 50rem;
+}
+
+.app {
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+
+.search-button {
+  display: grid;
+  justify-content: center;
+}
+
+input:focus::placeholder {
+  color: transparent;
+}
