Feat: Improve layout style

--- a/css/main.css
+++ b/css/main.css
@@ -268,22 +268,17 @@ textarea {
 .app {
   height: 100vh;
   display: grid;
-  /*justify-content: center;*/
-  /*align-content: center;*/
 }
 
 .main {
   justify-self: center;
-  align-content: center;
+  align-self: start;
 }
 
 .header {
-  /*height: 10vh;*/
   display: grid;
-  /*justify-self: end;*/
   align-self: center;
   grid-template-columns: repeat(3, 1fr);
-  /*grid-template-columns: 200px;*/
 }
 
 .search-button {
